# streeteasy-enhanced-extension

./: .gitignore  HANDOFF.md  LICENSE  README.md
.github/workflows/: pages.yml
.playwright/: cli.config.json
.playwright-cli/: page-2026-02-16T02-13-35-596Z.yml  page-2026-02-16T02-20-37-808Z.yml  page-2026-02-16T02-20-48-610Z.yml  page-2026-02-16T02-27-50-851Z.yml  page-2026-02-16T03-22-56-544Z.yml  page-2026-02-16T03-24-40-776Z.yml
backend-archived/: .env.example  package.json
backend-archived/db/: connection.js
backend-archived/pipeline/: load-population-data.js  update.js
backend/api/: server.js
backend/db/: init.js  schema.sql
backend/pipeline/: load-nta-boundaries.js
docs/: CUDA_RUNBOOK.md  MAINTAINERS.md  METHODOLOGY.md  RESEARCH.md  SETUP.md  data-explorer.html  debug-murder-map.html
docs/chrome-web-store/: LISTING.md  SUBMIT.md
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: coordinates-extractor.js  main.js  ui-injector.js
extension/data/: crime-stats.json  nta-boundaries.json
extension/icons/: README.md
extension/lib/: geo-utils.js  shared-types.js  sqft-api.js  storage.js  utils.js
extension/sidepanel/: sidepanel.css  sidepanel.html  sidepanel.js
extension/ui/: inline-module.css  inline-module.html  side-panel.css  side-panel.html  side-panel.js
launch/: index.html  privacy.html  script.js  styles.css
research/backend-archived/: README.md  package.json
scripts/: compile-data.js  compile-nta-exposure.py  make-store-assets.py  serve-debug-map.js  test-extension-e2e.py  test-extension-logic.mjs
scripts/fixtures/: listing-fixture.html
selfhost/: .gitignore  HANDOFF.md  README.md  RELEASE_CHECKLIST.md
selfhost-nc/: .gitignore  HANDOFF.md  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md
selfhost-nc/backend/: local_backend.py  pyproject.toml
selfhost-nc/docs/: playwright-cli-extension-testing.md
selfhost-nc/extension/: manifest.json
selfhost-nc/scripts/: bootstrap_models.py  doctor.sh  smoke_playwright_no_cuda.sh  start_backend.sh  sync_release.py
selfhost/scripts/: install.sh
sqft-from-photos/: .gitignore  AGENTS.md  PERSISTENT_EXECUTION_PLAN.md  README.md  STATUS.md
sqft-from-photos/cv-pipeline/: .claude.md  .gitignore  README.md  pyproject.toml
sqft-from-photos/cv-pipeline/docs/: PROJECT-PLAN.md  RUNPOD.md
sqft-from-photos/cv-pipeline/scripts/: build_colmap_cuda.sh  curate_web.py  doctor.py  download_models.py  estimate_storage.py  profile_vram.py  runpod_bootstrap.sh  runpod_quickstart.sh  runpod_resume.sh  runpod_setup_system.sh
sqft-from-photos/cv-pipeline/src/cv_pipeline/: __main__.py  cli.py  paths.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/calibration/: __init__.py  conformal.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/dataset/: __init__.py  streeteasy.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/depth/: __init__.py  base.py  depth_anything_v2_metric.py  metric3d_v2.py  moge_v2.py  unidepth_v1.py  zoedepth.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/experiments/: __init__.py  curate.py  report.py  sweep.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/fusion/: __init__.py  tsdf_open3d.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/geometry/: __init__.py  footprint.py  planes.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/image/: __init__.py  curation.py  preprocess.py  selection.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/pipeline/: __init__.py  runner.py  types.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/reconstruction/: __init__.py  dust3r_backend.py  mast3r_backend.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/retrieval/: __init__.py  embeddings.py  pairs.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/sfm/: __init__.py  colmap_db.py  colmap_lightglue.py  colmap_model.py  colmap_runner.py  scale.py  scale_depthmaps.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/uncertainty/: __init__.py  monte_carlo.py
sqft-from-photos/cv-pipeline/src/cv_pipeline/utils/: ids.py  subprocess.py
sqft-from-photos/cv-pipeline/tests/: test_alpha_shape.py  test_default_streeteasy_dataset_path.py  test_image_selection.py  test_scale_fit.py  test_streeteasy_dataset_formats.py
sqft-from-photos/v2-pipeline/: README.md  estimate_v2a.py  estimate_v2b.py  experiments.md  pick.py  pyproject.toml  v3_benchmakrs.py
sqft-from-photos/v2-pipeline/browser-rd/: README.md  probe_moge_onnx.py  run_all.sh  run_web_probe.mjs  summarize_model_scale.py
sqft-from-photos/v2-pipeline/browser-rd/web/: probe.html
sqft-from-photos/v2-pipeline/commercial_viable_paths/: README.md  run_commercial_listing001.py
sqft-from-photos/v2-pipeline/commercial_viable_paths/runs/run_20260227T010533Z/: SUMMARY.md  multiview_best.json
sqft-from-photos/v2-pipeline/commercial_viable_paths/runs/run_20260227T010646Z/: SUMMARY.md  multiview_best.json
sqft-from-photos/v2-pipeline/commercial_viable_paths/runs/run_20260227T010752Z/: SUMMARY.md  multiview_best.json
sqft-from-photos/v2-pipeline/commercial_viable_paths/runs/run_20260227T021755Z/: SUMMARY.md  multiview_best.json  multiview_moge_pose_orb.json  multiview_moge_pose_orb_sift_hybrid.json  multiview_moge_pose_orb_sift_hybrid_allow_scale.json  single_image_oneformer_moge.json
(+74 files in other folders)
