[project]
name = "sqft-from-photos-cv-pipeline"
version = "0.1.0"
description = "Photo-only CV pipeline to estimate apartment square footage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.20",
  "numpy>=1.26",
  "pillow>=10",
  "pydantic>=2.6",
  "scipy>=1.10",
  "shapely>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
gpu = [
  "opencv-python>=4.8",
  # Torch is intentionally not pinned (depends on CUDA). In RunPod, use a PyTorch image or install torch separately.
  "torch>=2.1",
  "torchvision>=0.16",
]
open3d = [
  "open3d>=0.18",
]

[project.scripts]
cv-pipeline = "cv_pipeline.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
