[project]
name = "sqft-from-photos-cv-pipeline"
version = "0.1.0"
description = "Photo-only CV pipeline to estimate apartment square footage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface-hub>=0.22",
  "numpy>=1.26",
  "pillow>=10",
  "pydantic>=2.6",
  "scipy>=1.10",
  "shapely>=2.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
gpu = [
  "opencv-python>=4.8",
  # Torch is intentionally not pinned (depends on CUDA). In RunPod, use a PyTorch image or install torch separately.
  "torch>=2.1",
  "torchvision>=0.16",
]
research = [
  # Dependencies required to run the research-plan profilers (DUSt3R/MASt3R).
  # (We intentionally do not pin torch/torchvision here; use the `gpu` extra and a CUDA-matched torch.)
  "einops>=0.7",
  "roma>=1.5",
  "tensorboard>=2.16",
  "trimesh>=4.0",
  "pyglet<2",
  "scikit-learn>=1.3",
]
open3d = [
  "open3d>=0.18",
]

[project.scripts]
cv-pipeline = "cv_pipeline.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
